# gitlab-brightspace-education-tools

./: .gitignore  README.md  gitlab-brightspace.example  gl.cfg.example  mypy.ini  pyproject.toml  semester_in_gitlab.ini.example
src/gitlab_teacher_tools/: brightspace_service.py  gitlab_service.py  invite_all_for_samples.py  myenv.py  run_teacher_tests.py  start_new_semester.py  sync_brightspace_with_gitlab.py
