[project]
name = "gitlab-teacher-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerbrand van Dieijen", email = "gerbrand@vandieijen.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "python-gitlab>=6.3.0",
]

[project.scripts]
gitlab-teacher-tools = "gitlab_teacher_tools:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
